force-app/main/default/objects/Listening_Log__c/Listening_Log__c.object-meta.xml
<CustomObject>
    <label>Listening Log</label>
    <nameField>
        <displayFormat>LL-{00000}</displayFormat>
        <label>Listening Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Listening Log</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>