force-app/main/default/objects/Listening_Log__c/fields/Audio_System__c.field-meta.xml
<CustomField>
    <fullName>Audio_System__c</fullName>
    <label>Audio System</label>
    <referenceTo>Audio_System__c</referenceTo>
    <relationshipLabel>Listening Logs</relationshipLabel>
    <relationshipName>Listening_Log</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>