force-app/main/default/objects/Listening_Log__c/fields/Listening_Date__c.field-meta.xml
<CustomField>
    <fullName>Listening_Date__c</fullName>
    <label>Listening Date</label>
    <type>Date</type>
</CustomField>