force-app/main/default/objects/Listening_Log__c/fields/Listening_Notes__c.field-meta.xml
<CustomField>
    <fullName>Listening_Notes__c</fullName>
    <label>Listening Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>