force-app/main/default/objects/Listening_Log__c/fields/Quality__c.field-meta.xml
<CustomField>
    <fullName>Quality__c</fullName>
    <description>Score 1-5</description>
    <inlineHelpText>Score 1-5</inlineHelpText>
    <label>Quality</label>
    <length>20</length>
    <type>Text</type>
</CustomField>